# cabal-force-upper-bound

./: CHANGELOG.md  README.md  build-all.sh  cabal-force-upper-bound.cabal  cabal-plan-bounds.cabal  shell.nix
.github/workflows/: ci.yaml
ci-configs/: ghc-9.6.2.config
src/: cabal-force-upper-bound.hs
