cabal-version:      3.0
name:               cabal-force-upper-bound
version:            0.1
synopsis:           Reliably exercise upper bounds of your cabal dependencies
description:
  This tool parses a .cabal file and returns a set of Cabal constraints
  (either as command line flags or cabal.config stanzas) that constrain your
  dependencies to the latest major version still allowed your package.

  This is necessary if your want your CI system to reliably assess PRs that extend
  the upper bound, as otherwise cabal may choose a lower version and a passing
  CI would be misleading.

license:            BSD-2-Clause
license-file:       LICENSE
author:             Joachim Breitner
maintainer:         mail@joachim-breitner.de
homepage:           https://github.com/nomeata/cabal-force-upper-bound
copyright:          2023
category:           Distribution
build-type:         Simple
extra-doc-files:    README.md CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-force-upper-bound
    import:           warnings
    main-is:          cabal-force-upper-bound.hs
    hs-source-dirs:   src/
    build-depends:    base ^>=4.14.3.0 || ^>=4.15.1.0 || ^>=4.16.3.0 || ^>=4.17.0.0 || ^>=4.18.0.0 || ^>=4.19.0,
                      bytestring ^>=0.10.12.0 || ^>=0.11.3.1 || ^>=0.12.0.0,
                      containers ^>=0.6.4.1,
                      text ^>=1.2.4.1 || ^>=2.0.1 || ^>=2.1,
                      Cabal-syntax ^>=3.8.1.0 || ^>=3.10.1.0,
                      optparse-applicative ^>=0.17.0.0 || ^>=0.18.1.0,
                      pretty ^>=1.1.3.6
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/nomeata/cabal-force-upper-bound
